Scheduler dialogs and top arrow z-index fix

--- a/styles/web/kendo.common.less
+++ b/styles/web/kendo.common.less
@@ -3975,6 +3975,11 @@ div.k-more-events
     white-space: nowrap;
 }
 
+.k-event-actions
+{
+    z-index: 1;
+}
+
 .k-scheduler-agenda .k-task > .k-link
 {
     top: 0;
@@ -4180,6 +4185,13 @@ td:hover > .k-task .k-event-delete
 .k-edit-field > ul.k-reset > li
 {
     margin: .2em 0 .4em;
+}
+
+.k-popup-message
+{
+    margin:0;
+    padding: 1em 0 2em;
+    text-align: center;
 }
 
 /* Tooltip */
